--- a/styles/main.css
+++ b/styles/main.css
@@ -1,70 +1,73 @@
-@import url('https://fonts.googleapis.com/css?family=Galada');
-body{
-  width:100%;
-  height:100%;
-  margin:0;
-  font-family: 'Galada', cursive;
-  font-size: 1.6em;
-  background-color:black;
-}
+/*@import url('https://fonts.googleapis.com/css?family=Shrikhand');*/
+/*.home {*/
+/*  position: relative;*/
+/*  height: 100%;*/
+/*  width: 100;*/
+/*  margin: 0;*/
+/*  background-image: url("https://torange.biz/photofx/177/8/beautiful-tiger-gold-background-177635.jpg");*/
+/*  font-family: 'Shrikhand', cursive;*/
+/*  background-size: cover;*/
+/*}*/
+/*body{*/
+/*  width:100%;*/
+/*  height:100%;*/
+/*  margin:0;*/
+/*}*/
 
-h1{
-  margin:0;
-  text-align:center;
-  background-color:#333;
-  color:white;
-  position:fixed;
-  width:100%;
-  top:0;
+/*h1{*/
+/*  margin:0;*/
+/*  text-align:center;*/
+/*  background-color:#333;*/
+/*  color:white;*/
+/*  position:fixed;*/
+/*  width:100%;*/
+/*  top:0;*/
   /*padding:2%;*/
-}
+/*}*/
 
-div{
-  text-align:center;
-  border:solid;
-  width:25%;
-  border-color:blue;
+/*div{*/
+/*  text-align:center;*/
+/*  border:solid;*/
+/*  width:25%;*/
  
-}
-.johnthan,
-.josh{
-  position:absolute;
-  left:15%;
-}
-.keala,
-.sean{
-  position:absolute;
-  right:15%;
-}
-.johnthan{
-  color:black;
-  background-color:yellow;
-  top:20%;
+/*}*/
+/*.johnthan,*/
+/*.josh{*/
+/*  position:absolute;*/
+/*  left:40%;*/
+/*}*/
+/*.keala,*/
+/*.sean{*/
+/*  position:absolute;*/
+/*  right:15%;*/
+/*  top:40;*/
+/*}*/
+/*.johnthan{*/
+/*  color:black;*/
+/*  background-color:yellow;*/
+/*  top:20%;*/
   
-}
-.keala{
-  color:pink;
-  background-color:limegreen;
-    top:20%;
-}
-.josh{
-  color:yellow;
-  background-color:darkblue;
-  top:65%;
-}
-.sean{
-  color:purple;
-  background-color:orange;
-  top:65%;
-}
-.moto{
-  color:#efeaea;
-  background-color:#820d28;
-  position:absolute;
-  z-index:1;
-  top:40%;
-  left:37%;
-}
-ul {
- list-style-type: none;
- }
+/*}*/
+/*.keala{*/
+/*  color:pink;*/
+/*  background-color:limegreen;*/
+/*    top:20%;*/
+/*}*/
+/*.josh{*/
+/*  color:orange;*/
+/*  background-color:blue;*/
+/*  top:85%;*/
+/*}*/
+/*.sean{*/
+/*  color:purple;*/
+/*  background-color:orange;*/
+/*  top:55%;*/
+/*}*/
+/*.moto{*/
+/*  color:#efeaea;*/
+/*  background-color:#820d28;*/
+/*  position:absolute;*/
+/*  z-index:1;*/
+/*  top:40%;*/
+/*  left:37%;*/
+/*}*/
