--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100;
   margin: 0;
-  background: url("https://media.giphy.com/media/BtLZNZ5OLqB3i/giphy.gif")no-repeat fixed;
+ background: url("")no-repeat fixed;
   font-family: 'Shrikhand', cursive;
   background-size: cover;
 }
