the correct version

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,13 @@
-/* *{
-  border:solid red .05em;
-/*   position:abslute;
-/*   display:inline; */
+@import url('https://fonts.googleapis.com/css?family=Galada|Shrikhand');
 body{
   width:100%;
   height:100%;
   margin:0;
+  font-family: 'Galada', cursive;
+  font-size: 1.6em;
+  background-color:black;
 }
+
 
 h1{
   margin:0;
@@ -23,6 +24,7 @@ div{
   text-align:center;
   border:solid;
   width:25%;
+  border-color:blue;
  
 }
 .johnthan,
@@ -47,8 +49,8 @@ div{
     top:20%;
 }
 .josh{
-  color:orange;
-  background-color:blue;
+  color:yellow;
+  background-color:darkblue;
   top:65%;
 }
 .sean{
@@ -64,51 +66,6 @@ div{
   top:40%;
   left:37%;
 }
-.container{
-  position:relative; 
-  width: 100%;
-  margin:0 auto;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color:rgba(0,55,73,.7);
-  overflow: hidden;
-  width: 0;
-  height: 100%;
-  transition: .5s ease;
-}
-
-.container:hover .overlay {
-  width: 100%;
-}
-
-.text {
-  white-space: nowrap; 
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-.heros{
-  width: 100%;
-  
-}
-.text2 {
-  white-space: nowrap; 
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
+ul {
+ list-style-type: none;
+ }
