--- a/styles/style.css
+++ b/styles/style.css
@@ -1,109 +1,3 @@
-
-
- jonathan
-div{
-  text-align:center;
-  border:solid;
-  width:25%;
-  border-color:blue;
- 
-}
-.johnthan,
-.josh{
-  position:absolute;
-  left:15%;
-}
-.keala,
-.sean{
-  position:absolute;
-  right:15%;
-}
-.johnthan{
-  color:black;
-  background-color:yellow;
-  top:20%;
-  
-}
-.keala{
-  color:pink;
-  background-color:limegreen;
-    top:20%;
-}
-.josh{
-  color:yellow;
-  background-color:darkblue;
-  top:65%;
-}
-.sean{
-  color:purple;
-  background-color:orange;
-  top:65%;
-}
-.moto{
-  color:#efeaea;
-  background-color:#820d28;
-  position:absolute;
-  z-index:1;
-  top:40%;
-  left:37%;
-}
-ul {
- list-style-type: none;
- }
-=======
-/*div{*/
-/*  text-align:center;*/
-  /*border:solid;*/
-/*  width:100%;*/
- 
-/*}*/
-/*.johnthan,*/
-/*.josh{*/
-/*  position:absolute;*/
-/*  left:50%;*/
-/*}*/
-/*.keala,*/
-/*.sean{*/
-/*  position:absolute;*/
-/*  right:50%;*/
-/*}*/
-/*.johnthan{*/
-/*  color:black;*/
-/*  background-color:yellow;*/
-/*  top:25%;*/
-/*  width:40%;*/
-/*}*/
-/*.keala{*/
-/*  color:pink;*/
-/*  background-color:limegreen;*/
-/*    top:25%;*/
-/*    width:40%;*/
-/*}*/
-/*.josh{*/
-/*  color:orange;*/
-/*  background-color:blue;*/
-/*  top:65%;*/
-/*  width:40%;*/
-/*}*/
-/*.sean{*/
-/*  color:purple;*/
-/*  background-color:orange;*/
-/*  top:65%;*/
-/*  width:40%;*/
-/*}*/
-/*.moto{*/
-/*  color:#efeaea;*/
-/*  background-color:#820d28;*/
-/*  position:absolute;*/
-/*  z-index:1;*/
-/*  top:40%;*/
-/*  left:37%;*/
-/*}*/
-.container{
-  position:relative; 
-  width: 25%;
-  margin:0 auto;
-}
 @import url('https://fonts.googleapis.com/css?family=Galada');
 
 h1 {
@@ -125,7 +19,7 @@ h1 {
   width: 100%;
   margin: 0 auto;
 }
-
+ 
 .overlay {
   position: absolute;
   bottom: 0;
@@ -151,7 +45,7 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  font-family: 'Galada', cursive;
 }
 
 .heros {
@@ -184,6 +78,8 @@ body {
   margin: 0;
   background-image: url("../images/tigerboi.jpg") ;
   background-size:cover;
+  font-family: 'Galada', cursive;
+  background-repeat: no-repeat;
 }
 
 
@@ -207,12 +103,14 @@ div {
   position: absolute;
   right: 15%;
   text-align: center;
+  right:10%;
 }
 
 .johnthan {
   color: aquamarine;
   background-color: black;
   top: 20%;
+  left:10%;
 
 }
 
@@ -220,12 +118,14 @@ div {
   color: aquamarine;
   background-color: black;
   top: 20%;
+  right:10;
 }
 
 .josh {
   color: aquamarine;
   background-color: black;
   top: 65%;
+  left:10%;
 }
 
 .sean {
@@ -241,4 +141,13 @@ div {
   z-index: 1;
   top: 40%;
   left: 37%;
+}
+
+.qoute{
+  color:aquamarine;
+  background-color: black;
+  text-align: center;
+  
+  left: 37%;
+  top: 50%;
 }
