--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ h1 {
   width: 100%;
   margin: 0 auto;
 }
- 
+
 .overlay {
   bottom: 0;
   left: 0;
@@ -56,6 +56,11 @@ img{
   height: 150%;
 }
 
+.homepage {}
+
+li{
+  font-size: .8em;
+}
 ul {
   list-style: none;
   text-align: left;
@@ -65,9 +70,11 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  margin: 0%;
-  background-image: url("../images/tigerboi.jpg") ;
-  background-size:cover;
+  margin: 0;
+  background-image: url("../images/tigerboi.jpg");
+  background-size: cover;
+  font-family: 'Galada', cursive;
+  background-repeat: no-repeat;
   min-height:100vh;
 }
 
@@ -82,6 +89,7 @@ body {
 
 .johnthan,
 .josh {
+
   left: 15%;
   text-align: center;
 }
@@ -89,31 +97,34 @@ body {
 .keala,
 .sean {
   right: 15%;
+  position: fixed;
   text-align: center;
-  right:10%;
 }
 
 .johnthan {
   color: aquamarine;
   background-color: black;
+
 }
 
 .keala {
   color: aquamarine;
   background-color: black;
+
 }
 
 .josh {
   color: aquamarine;
   background-color: black;
   top: 65%;
-  left:10%;
+  left: 10%;
 }
 
 .sean {
   color: aquamarine;
   background-color: black;
   top: 65%;
+  right:10%;
 }
 
 .moto {
@@ -125,13 +136,18 @@ body {
   left: 37%;
 }
 
-.qoute{
-  color:aquamarine;
+.qoute {
+  color: aquamarine;
   background-color: black;
+  position: fixed;
   text-align: center;
-  
   left: 37%;
   top: 50%;
+}
+img{
+  width:15%;
+  left:50%;
+  right:50%;
 }
 
 /*pictures.html hover effect*/
