--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ h1 {
   width: 100%;
   top: 0;
   padding: 2%;
-  font-size:3em;
+  font-size: 3em;
   font-family: 'Galada', cursive;
 }
 
@@ -19,7 +19,7 @@ h1 {
   width: 100%;
   margin: 0 auto;
 }
- 
+
 .overlay {
   position: absolute;
   bottom: 0;
@@ -67,6 +67,9 @@ h1 {
 
 .homepage {}
 
+li{
+  font-size: .8em;
+}
 ul {
   list-style: none;
   text-align: left;
@@ -76,8 +79,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  background-image: url("../images/tigerboi.jpg") ;
-  background-size:cover;
+  background-image: url("../images/tigerboi.jpg");
+  background-size: cover;
   font-family: 'Galada', cursive;
   background-repeat: no-repeat;
 }
@@ -93,45 +96,44 @@ div {
 
 .johnthan,
 .josh {
-  position: absolute;
+  position: fixed;
   left: 15%;
   text-align: center;
 }
 
 .keala,
 .sean {
-  position: absolute;
   right: 15%;
+  position: fixed;
   text-align: center;
-  right:10%;
 }
 
 .johnthan {
   color: aquamarine;
   background-color: black;
   top: 20%;
-  left:10%;
-
+  left: 10%;
 }
 
 .keala {
   color: aquamarine;
   background-color: black;
   top: 20%;
-  right:10;
+  right: 10%;
 }
 
 .josh {
   color: aquamarine;
   background-color: black;
   top: 65%;
-  left:10%;
+  left: 10%;
 }
 
 .sean {
   color: aquamarine;
   background-color: black;
   top: 65%;
+  right:10%;
 }
 
 .moto {
@@ -143,11 +145,16 @@ div {
   left: 37%;
 }
 
-.qoute{
-  color:aquamarine;
+.qoute {
+  color: aquamarine;
   background-color: black;
+  position: fixed;
   text-align: center;
-  
   left: 37%;
   top: 50%;
+}
+img{
+  width:15%;
+  left:50%;
+  right:50%;
 }
