--- a/styles/style.css
+++ b/styles/style.css
@@ -327,7 +327,7 @@ div{
   margin-top: 0%;
   flex-wrap:wrap;
   align-items:center;
-
+  z-index:1;
 }
 a{
   text-decoration: none;
@@ -372,7 +372,7 @@ footer{
   padding: 0;
   height:3em;
   display: flex;
-  position:relative;
+  position:absolute;
   width: 100%;
   clear: both;
   bottom:0; 
