--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Galada');
 
-h1 {
+/*index.html styles*/
+.home h1 {
   margin: 0;
   text-align: center;
   background-color: #333;
@@ -13,71 +14,29 @@ h1 {
   font-family: 'Galada', cursive;
 }
 
-
-.container .about {
-  position: relative;
-  width: 100%;
-  margin: 0 auto;
+.home h2 {
+  align-items: center;
 }
 
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 55, 73, .7);
-  overflow: hidden;
-  width: 0;
-  height: 100%;
-  transition: .5s ease;
+.home main{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-around;
+  align-content:space-around;
 }
 
-.container:hover .overlay {
-  width: 100%;
-}
-
-.text {
-  white-space: nowrap;
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Galada', cursive;
-}
-
-.heros {
-  width: 100%;
-
-}
-
-.text2 {
-  white-space: nowrap;
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-.homepage {}
-
-li{
+.home li {
   font-size: .8em;
 }
-ul {
+
+.home ul {
   list-style: none;
   text-align: left;
 }
-
+/*duplicate body styles may need to be removed depending on merge*/
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   background-image: url("../images/tigerboi.jpg");
   background-size: cover;
@@ -86,54 +45,50 @@ body {
 }
 
 
-div {
-  text-align: left;
-  border: solid;
-  width: 25%;
+.home div {
   font-size: 1.8em;
   font-family: 'Galada', cursive;
+  margin: .5em;
 }
 
 .johnthan,
 .josh {
-  position: fixed;
-  left: 15%;
-  text-align: center;
+    border: solid;
+
 }
 
 .keala,
 .sean {
-  right: 15%;
-  position: fixed;
-  text-align: center;
+    border: solid;
+
 }
 
 .johnthan {
   color: aquamarine;
   background-color: black;
-  top: 20%;
-  left: 10%;
+  width:40%;
+  order:6;
 }
 
 .keala {
   color: aquamarine;
   background-color: black;
-  top: 20%;
-  right: 10%;
+  width:40%;
+  order:2;
 }
 
 .josh {
   color: aquamarine;
   background-color: black;
-  top: 65%;
-  left: 10%;
+  width:40%;
+  order:1;
 }
 
 .sean {
   color: aquamarine;
   background-color: black;
-  top: 65%;
-  right:10%;
+  width:40%;
+  order:5;
 }
 
 .moto {
@@ -148,13 +103,24 @@ div {
 .qoute {
   color: aquamarine;
   background-color: black;
-  position: fixed;
+  /*display: flex;*/
   text-align: center;
-  left: 37%;
-  top: 50%;
+  align-items: center;
+  width:80%;
+  order:3;
+  border: solid;
+
 }
-img{
-  width:15%;
-  left:50%;
-  right:50%;
+
+.cs-images {
+  width: 100%;
+  order:4;
+  border:none;
 }
+
+.cs-images img{
+  display:block;
+  margin:0 auto;
+  
+}
+/*end of index.html styles*/
