fixed carousel's size

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css?family=Shrikhand');
+@import url('https://fonts.googleapis.com/css?family=Galada|Shrikhand');
 .home {
   position: relative;
   height: 100%;
