--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Galada|Shrikhand');
 body {
     width: 100%;
     margin: 0;
@@ -10,6 +11,7 @@ body {
 
 img {
     vertical-align: middle;
+    height: 30%;
 }
 
 /* Slideshow container */
