--- a/styles/style.css
+++ b/styles/style.css
@@ -31,27 +31,6 @@
   font-size: .8em;
 }
 
-.heros {
-  width: 100%;
-}
-.picture img{
-  height: 150%;
-  width:100%;
-}
-
-ul {
-  list-style: none;
-  text-align: left;
-}
-
-.pictures{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0%;
-  background-color:black;
-  background-size:cover;
-
 .home ul {
   list-style: none;
   text-align: left;
@@ -151,10 +130,6 @@ body {
 
 
 /*pictures.html hover effect*/
-.pictures,teamphoto{
-  width:100%;
-  height:100%;
-}
 .container{
   position:relative; 
   width: 25%;
@@ -225,7 +200,7 @@ h1 {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
-.images,div{
+div{
   display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
