--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ ul {
   margin: 0%;
   background-color:black;
   background-size:cover;
-
+}
 .home ul {
   list-style: none;
   text-align: left;
