--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,6 @@
   width: 100%;
 }
 .pictures img{
-  height: 150%;
   width:100%;
 }
 
@@ -49,6 +48,7 @@ ul {
   width: 100%;
   height: 100%;
   margin: 0%;
+  background:none;
   background-color:black;
   background-size:cover;
 }
