--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -6,7 +6,7 @@ body {
 }
 
 .mySlides {
-    display: none;
+    /*display: none;*/
 }
 
 img {
@@ -22,17 +22,7 @@ img {
     margin: auto;
 }
 
-/* Caption text */
 
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
 
 /* Number text (1/3 etc) */
 
