--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Galada');
 
 /*index.html styles*/
-.home h1 {
+.home{
   margin: 0;
   text-align: center;
   background-color: #333;
@@ -162,16 +162,25 @@ body {
 }
 
 h1 {
-  margin: 0;
   text-align: center;
   background-color: #333;
   color: aquamarine;
   position: fixed;
-  width: 100%;
-  top: 0;
+  width: 60%;
+  top: 30%;
+  left: 20%;
+  justify-content: center;
   padding: 2%;
   font-size:3em;
   font-family: 'Galada', cursive;
+}
+
+.video{
+  justify-content: center;
+  top: 30%;
+  left: 20%;
+  display: flex;
+  align-items:center;
 }
 
 
